# qsfcc

./: .gitignore  CMakeLists.txt  main.cpp
dataset/: barometric_pressure.csv
dataset/NEON_pressure-air/: NEON_pressure-air.manifest.20250826T090320Z.json
dataset/NEON_pressure-air/NEON.D12.BLDE.DP1.00004.001.2020-01.basic.20210123T023002Z.RELEASE-2021/: NEON.D12.BLDE.DP1.00004.001.200.000.001.BP_1min.2020-01.basic.20200701T045541Z.csv  NEON.D12.BLDE.DP1.00004.001.200.000.030.BP_30min.2020-01.basic.20200701T045541Z.csv  NEON.D12.BLDE.DP1.00004.001.EML.20200101-20200201.20210123T023002Z.xml  NEON.D12.BLDE.DP1.00004.001.readme.20210123T023002Z.txt  NEON.D12.BLDE.DP1.00004.001.sensor_positions.20200701T045541Z.csv
dataset/NEON_pressure-air/NEON.D12.BLDE.DP1.00004.001.2020-02.basic.20210123T023002Z.RELEASE-2021/: NEON.D12.BLDE.DP1.00004.001.200.000.030.BP_30min.2020-02.basic.20200701T073158Z.csv  NEON.D12.BLDE.DP1.00004.001.EML.20200201-20200301.20210123T023002Z.xml  NEON.D12.BLDE.DP1.00004.001.readme.20210123T023002Z.txt
dataset/NEON_pressure-air/NEON.D12.BLDE.DP1.00004.001.2020-03.basic.20210123T023002Z.RELEASE-2021/: NEON.D12.BLDE.DP1.00004.001.200.000.030.BP_30min.2020-03.basic.20200703T184621Z.csv  NEON.D12.BLDE.DP1.00004.001.EML.20200301-20200401.20210123T023002Z.xml  NEON.D12.BLDE.DP1.00004.001.readme.20210123T023002Z.txt
src/: perf_table.csv
src/qsfcc/: defs.h  qsfcc.cpp  qsfcc.h  quantizer.h  sfc.cpp  sfc.h  test.cpp
src/sim_piece/: CMakeLists.txt
tools/: process_dataset.py
(+10 files in other folders)
